--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,6 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "forwardPorts": [3000]
+  "features": {
+    "ghcr.io/ddev/ddev/install-ddev:latest": {}
+  },
 }
